--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,71 @@
+@keyframes entrar {
+    0% {
+        transform: translate(500px);
+    }
+    25% {
+        transform: translate(0px);
+    }
+    75% {
+        transform: translate(100px);
+    }
+    100% {
+        transform: translate(0px);
+    }
+}
+
 body {
     font-family: 'JetBrains Mono', monospace;
     display: flex;
     justify-content: space-between;
+}
+
+.avisos {
+    position: fixed;
+    right: 90px;
+    top: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.aviso {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    font-family: 'JetBrains Mono', monospace;
+    box-shadow: 0px 0px 15px #000;
+    margin-bottom: 30px;
+    transform: translate(0px);
+    transition: all 1s linear;
+    animation-name: entrar;
+    animation-duration: 1s;
+    position: relative;
+}
+
+.mensagem {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mensagem img {
+    width: 21px;
+    margin-right: 13px;
+}
+
+.mensagem span {
+    color: #fff;
+}
+
+.barra {
+    width: 100%;
+    height: 5px;
+    background-color: #00f;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    transition: width 6s linear;
 }
 
 main,
@@ -37,12 +101,12 @@ form>h2 {
 
 form>label {
     align-self: flex-start;
+    margin-bottom: 16px;
 }
 
 .field {
     width: 100%;
     height: 2.5rem;
-    margin-bottom: 1rem;
     outline: none;
     border-radius: 5px;
     padding: 0 0.5rem;
@@ -84,6 +148,7 @@ aside {
     display: flex;
     flex-flow: column;
     align-items: center;
+    overflow: hidden;
 }
 
 aside>h3 {
@@ -159,4 +224,12 @@ aside>ul>li {
 aside>ul>li:hover {
     background-color: #2e5a87;
     transition: 500ms;
+}
+
+.error {
+    font-size: 11px;
+    background-color: #FF0000;
+    color: #FFF;
+    padding: 4px;
+    border-radius: 5px;
 }
